# dish-generator

./: .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  handler.py  makefile  pyproject.toml  requirements.txt  runner.sh  settings.py  setup.sh
alembic/: env.py  script.py.mako
alembic/versions/: 2022_12_22_235132.py  2022_12_23_091142.py  2022_12_23_121634.py
app/products/: filters.py  models.py  serializers.py  utils.py  validators.py  views.py
core/: db.py  main.py
utils/: base_model.py  base_serailizer.py  images.py  mixins.py  model_manager.py  pagination.py  s3.py
