[tool.poetry]
name = "dish-generator"
version = "0.1.0"
description = ""
authors = ["darynarodicheva <daryna.r@gowombat.team>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
sqlmodel = "^0.0.8"
SQLAlchemy = "1.4.35"
alembic = "^1.9.0"
SQLAlchemy-Utils = "^0.38.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
