[tool.poetry]
name = "dish-generator"
version = "0.1.0"
description = ""
authors = ["darynarodicheva <daryna.r@gowombat.team>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.88.0"
sqlmodel = "^0.0.8"
SQLAlchemy = "1.4.35"
alembic = "^1.9.0"
SQLAlchemy-Utils = "^0.38.3"
fastapi-pagination = "^0.11.1"
fastapi-utils = "^0.2.1"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"
fastapi-filter = "^0.5.1"
mangum = "^0.17.0"
boto3 = "^1.26.37"
pip = "^22.3.1"
install = "^1.3.5"
bing-image-downloader = "^1.1.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
